// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconMessenger /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconMessenger /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconMessenger /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconMessenger /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconMessenger /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconMessenger /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconMessenger /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.1 44.8c-47.8 0-86.5 35.9-86.5 80.3 0 25.4 12.6 47.8 32.4 62.5v30.3l27.4-16.6c8.4 2.5 17.3 4.3 26.7 4.3 47.8 0 86.5-36.2 86.5-80.5s-38.8-80.3-86.5-80.3zm8.5 107L114 129.4l-40.1 21.2 43.9-47.3 22.6 22.4 41.4-21.2-45.2 47.3z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
